--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,17 @@
 	<body>
 		<div id="content">Wordt geladen...</div>
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/mithril/0.2.3/mithril.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/mithril/0.2.3/mithril.min.js"></script>
 		<script src="https://goodnekk.github.io/bukowski.js/release/0.3.0/bukowski.min.js"></script>
-    <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+		<script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+
+		<script src="js/Model.js" charset="utf-8"></script>
+
 		<script src="js/Paper.js" charset="utf-8"></script>
 		<script src="js/MenuBar.js" charset="utf-8"></script>
-		<script src="js/HomePage.js" charset="utf-8"></script>
+		<script src="js/RouteDisplay.js" charset="utf-8"></script>
+		<script src="js/PlannerInput.js" charset="utf-8"></script>
+		<script src="js/MapPage.js" charset="utf-8"></script>
 		<script src="js/StatsPage.js" charset="utf-8"></script>
 		<script src="js/Main.js" charset="utf-8"></script>
 	</body>
